# icon_extractor

./: Cargo.toml  README.md
src/: main.rs
