[package]
name = "icon_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
tempfile = "3.20.0"
widestring = "1.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "wingdi", "winuser", "combaseapi", "objbase", "shlobj"] }
windows = {version = "0.61", features = ["Win32_UI_Shell", "Win32_System_Com"]}

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"